# cloud

./: Makefile  pyproject.toml  terraform.tf
.github/workflows/: lint.yml  terraform.yml  test_unit.yml
scripts/: get_outputs.py
src/handlers/insert_history/: insert_history.py
terraform_modules/common/: cognito.tf  dynamodb.tf  events.tf  iam.tf  lambda.tf  logs.tf  s3.tf  ssm.tf  terraform.tf  variables.tf
terraform_modules/lambda_function/: lambda.tf  variables.tf
terraform_modules/lambda_function_basic/: lambda.tf  terraform.tf
