[tool.poetry]
name = "template-lambda-by-terraform"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.powertools.dependencies]
# arn:aws:lambda:ap-northeast-1:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:11
aws-lambda-powertools = {version = "3.9.0", extras = ["all"]}

[tool.poetry.group.base_layer.dependencies]
boto3 = "1.37.28"
aws-cloudwatch-logs-url = "1.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
freezegun = "*"
boto3-stubs = {version = "1.37.28", extras = ["events", "dynamodb", "ssm"]}

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:botocore.*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
